# oracle-test-ai-agent

./: .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOY_CHECKLIST.md  LICENSE  README.md  action.yml  harness.config.json  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: oracle-flake-hunter.md  oracle-framework-advisor.md  oracle-test-author.md  oracle-test-reviewer.md
.github/: dependabot.yml
.github/workflows/: docs-lint.yml  fork-policy.yml  harness-architecture.yml  harness-quality.yml  harness-security.yml  harness.yml  oracle-generate.yml  refresh-security-ledger.yml  wiki-sync.yml
.harness/: .gitignore  learnings.md
.harness/security/: timeline.json
agent/: cli.py
agent/core/: ci_env.py  classifier.py  domain_scanner.py  executor.py  framework_registry.py  metadata_scanner.py  migrator.py  orchestrator.py  pattern_matcher.py  recommender.py  reporter.py  scaffolder.py  selector_healer.py
agent/frameworks/: registry.json
agent/llm/: __init__.py  client.py  factory.py
agents/skills/: README.md
docs/: FORK_POLICY.md  ORACLE_LEARNINGS.md  ORACLE_ROADMAP.md  ORACLE_STATE.md  SECURITY_LEDGER.md  roadmap.md
docs/guides/: framework-registry.md  index.md  llm-providers.md  orchestrator.md
docs/plans/: ide-plugins-vscode.md
docs/specs/: ide-plugins.md  tests.md
docs/wiki/: Architecture-Deep-Dive.md  For-Manual-Testers.md  Getting-Started.md  (+7 more)
scripts/: security_ledger.py  setup-python.sh  upstream_sync.py
tests/: .gitignore
(+23 files in other folders)
