[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle"
version = "0.1.0"
description = "AI-powered test automation agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.102.0,<2",
    "google-genai>=2.3.0",
    "openai>=2.37.0,<3",
    "typer>=0.25.1,<1",
    "rich>=15.0.0,<16",
]

[project.scripts]
oracle = "agent.cli:app"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["agents*", "tests*", "docs*", "scripts*"]
